--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,18 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="./Images/fav-icon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Amazon</title>
   </head>
   <body>
     <div id="root"></div>
+
+
+
+
+
+   
+  
+  
   </body>
 </html>
